# ProjektRejsSO

./: CMakeCache.txt  CMakeLists.txt  KapitanPortu.cpp  KapitanStatku.cpp  Makefile  Pasazer.cpp  TESTY.docx  cmake_install.cmake  common.c  common.cpp  common.h  kapitan_portu.c  kapitan_statku.c  main.c  main.cpp  pasazer.c  statek
